syntax = "proto3";
package protos.connectors;

import "google/protobuf/wrappers.proto";
import "protos/base.proto";

message ClickhouseDatabaseAssetModel {
  google.protobuf.StringValue database = 1;
}

message ClickhouseDatabaseAssetOptions {
  repeated string databases = 1;
}

// Column model for tables
message ClickhouseColumnModel {
  google.protobuf.StringValue name = 1;
  google.protobuf.StringValue data_type = 2;
  google.protobuf.BoolValue is_nullable = 3;
  google.protobuf.StringValue default_value = 4;
  google.protobuf.StringValue description = 5;
}

// Table asset
message ClickhouseTableAssetModel {
  google.protobuf.StringValue table_name = 1;
  google.protobuf.StringValue database_name = 2;
  google.protobuf.StringValue engine = 3;
  google.protobuf.StringValue description = 4;
  google.protobuf.StringValue size = 5;
  repeated ClickhouseColumnModel columns = 6;
}

message ClickhouseTableAssetOptions {
  repeated string tables = 1;
  repeated string databases = 2;
}

message ClickhouseAssetModel {
  google.protobuf.UInt64Value id = 1;
  Source connector_type = 2;
  SourceModelType type = 3;
  sfixed64 last_updated = 4;

  oneof asset {
    ClickhouseDatabaseAssetModel clickhouse_database = 5;
    ClickhouseTableAssetModel clickhouse_table = 6;
  }
}

message ClickhouseAssets {
  repeated ClickhouseAssetModel assets = 1;
}
